@@ -26,6 +26,7 @@ export(quick.csv)
 export(quick.xls)
 export(report_cor.bf)
 export(row_means)
+export(row_sums)
 export(rv)
 export(rv4)
 export(rv4zero)
