@@ -3,4 +3,5 @@ Mmisc v0.6 (Release date: 2019-05-06)
 
     Changes:
 
-    * Added rowMeans(), a base::rowMeans() alternative that JUST WORKS inside a dplyr::mutate() call
+    * Added row_means(), a base::rowMeans() alternative that JUST WORKS inside a dplyr::mutate() call
+    * Added row_sums(), a base::rowSums() alternative that JUST WORKS inside a dplyr::mutate() call
